@@ -1,43 +1,40 @@
 package dk.dbc.dataio.gatekeeper.transfile;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class TransFileTest {
-    @Rule
-    public TemporaryFolder testFolder = new TemporaryFolder();
+    @TempDir
+    public Path testFolder;
 
-    @Test(expected = NullPointerException.class)
+    @Test
     public void constructor_transfileArgIsNull_throws() {
-        new TransFile(null);
+        assertThrows(NullPointerException.class, () -> new TransFile(null));
     }
 
     @Test
     public void constructor_transfileContainsEmptyLines_emptyLinesAreSkipped() throws IOException {
-        testFolder.newFile("123456.%001");
+        Files.createFile(testFolder.resolve("123456.%001"));
         final String line1 = "b=base1,f=123456.%001,i=æøå";
         final String line2 = "b=base2,f=123456.%001";
-        final Path file = testFolder.newFile("123456.trans").toPath();
-        final StringBuilder content = new StringBuilder()
-                .append(line1).append("\n")
-                .append("\n")
-                .append("\n")
-                .append(line2).append("\n")
-                .append("\n")
-                .append("slut");
-        Files.write(file, content.toString().getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        Path file = Files.createFile(testFolder.resolve("123456.trans"));
+        String content = line1 + "\n" +
+                "\n" +
+                "\n" +
+                line2 + "\n" +
+                "\n" +
+                "slut";
+        Files.writeString(file, content);
+        TransFile transFile = new TransFile(file);
         assertThat("Number of transfile lines", transFile.getLines().size(), is(2));
         assertThat("Transfile line 1", transFile.getLines().get(0).getLine(), is(line1));
         assertThat("Transfile line 2", transFile.getLines().get(1).getLine(), is(line2));
@@ -47,13 +44,8 @@ public class TransFileTest {
 
     @Test
     public void isComplete_transfileIsNotComplete_returnsFalse() throws IOException {
-        final TransFile transFile = new TransFile(testFolder.newFile().toPath());
+        TransFile transFile = makeTransfile("");
         assertThat(transFile.isComplete(), is(false));
-    }
-
-    @Test
-    public void isValid_transfileIsNotComplete_returnsFalse() throws IOException {
-        final TransFile transFile = new TransFile(testFolder.newFile().toPath());
         assertThat("Transfile is invalid", transFile.isValid(), is(false));
         assertThat("Invalidation cause", transFile.getCauseForInvalidation(),
                 is("Transfil har intet indhold"));
@@ -61,9 +53,7 @@ public class TransFileTest {
 
     @Test
     public void isValid_transfileNameContainsWhitespace_returnsFalse() throws IOException {
-        final Path file = testFolder.newFile("123456.my file.trans").toPath();
-        Files.write(file, "slut".getBytes());
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("123456.my file.trans", "slut");
         assertThat("Transfile is invalid", transFile.isValid(), is(false));
         assertThat("Invalidation cause", transFile.getCauseForInvalidation(),
                 is("Transfilnavn indeholder blanktegn"));
@@ -71,9 +61,7 @@ public class TransFileTest {
 
     @Test
     public void isValid_datafileNameContainsIllegalCharacter_returnsFalse() throws IOException {
-        final Path file = testFolder.newFile("123456.trans").toPath();
-        Files.write(file, "b=base,f=123456.[VAR].abc\nslut".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("b=base,f=123456.[VAR].abc\nslut");
         assertThat("Transfile is invalid", transFile.isValid(), is(false));
         assertThat("Invalidation cause", transFile.getCauseForInvalidation(),
                 is("Datafilnavn <123456.[VAR].abc> indeholder ulovlige tegn"));
@@ -81,9 +69,7 @@ public class TransFileTest {
 
     @Test
     public void isValid_datafileNameMissing_returnsFalse() throws IOException {
-        final Path file = testFolder.newFile("123456.trans").toPath();
-        Files.write(file, "b=base\nslut".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("b=base\nslut");
         assertThat("Transfile is invalid", transFile.isValid(), is(false));
         assertThat("Invalidation cause", transFile.getCauseForInvalidation(),
                 is("Datafil angivelse mangler i transfilen"));
@@ -91,9 +77,7 @@ public class TransFileTest {
 
     @Test
     public void isValid_datafileNotFound_returnsFalse() throws IOException {
-        final Path file = testFolder.newFile("123456.trans").toPath();
-        Files.write(file, "b=base,f=424242\nslut".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("b=base,f=424242\nslut");
         assertThat("Transfile is invalid", transFile.isValid(), is(false));
         assertThat("Invalidation cause", transFile.getCauseForInvalidation(),
                 is("Kan ikke finde datafilen: 424242"));
@@ -101,9 +85,7 @@ public class TransFileTest {
 
     @Test
     public void isValid_transfileNameWithoutSubmitter_returnsFalse() throws IOException {
-        final Path file = testFolder.newFile("marc21.trans").toPath();
-        Files.write(file, "b=base,f=424242\nslut".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("marc21.trans", "b=base,f=424242\nslut");
         assertThat("Transfile is invalid", transFile.isValid(), is(false));
         assertThat("Invalidation cause", transFile.getCauseForInvalidation(),
                 is("Transfilnavn indeholder ugyldigt biblioteksnummer 'marc21'"));
@@ -111,9 +93,7 @@ public class TransFileTest {
 
     @Test
     public void isValid_transfileNameNumberFormatException_returnsFalse() throws IOException {
-        final Path file = testFolder.newFile("123abc.trans").toPath();
-        Files.write(file, "b=base,f=424242\nslut".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("123abc.trans", "b=base,f=424242\nslut");
         assertThat("Transfile is invalid", transFile.isValid(), is(false));
         assertThat("Invalidation cause", transFile.getCauseForInvalidation(),
                 is("Transfilnavn indeholder ugyldigt biblioteksnummer '123abc'"));
@@ -121,66 +101,38 @@ public class TransFileTest {
 
     @Test
     public void isValid_transfileNameLeadingZeros_returnsTrue() throws IOException {
-        final Path file = testFolder.newFile("000123.trans").toPath();
-        Files.write(file, "b=base,f=424242\nslut".getBytes(StandardCharsets.UTF_8));
-        final Path data = testFolder.newFile("424242").toPath();
-        final TransFile transFile = new TransFile(file);
+        makeTransfile("424242", "");
+        TransFile transFile = makeTransfile("000123.trans", "b=base,f=424242\nslut");
         assertThat("Transfile is valid", transFile.isValid(), is(true));
     }
 
     @Test
     public void isComplete_transfileIsCompletedWithSlut_returnsTrue() throws IOException {
-        final Path file = testFolder.newFile().toPath();
-        Files.write(file, "slut".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile =makeTransfile("slut");
         assertThat(transFile.isComplete(), is(true));
     }
 
     @Test
     public void isComplete_transfileIsCompletedWithFinish_returnsTrue() throws IOException {
-        final Path file = testFolder.newFile().toPath();
-        Files.write(file, "finish".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("finish");
         assertThat(transFile.isComplete(), is(true));
     }
 
     @Test
     public void getLines_whenLinesExist_returnsUnmodifiableList() throws IOException {
-        final Path file = testFolder.newFile().toPath();
-        Files.write(file, "slut".getBytes(StandardCharsets.UTF_8));
-        final TransFile transFile = new TransFile(file);
-        try {
-            transFile.getLines().add(null);
-            fail("No exception thrown");
-        } catch (UnsupportedOperationException e) {
-        }
-    }
-
-    @Test
-    public void getPath_returnsPathOfTransfile() throws IOException {
-        final Path file = testFolder.newFile().toPath();
-        final TransFile transFile = new TransFile(file);
-        assertThat(transFile.getPath(), is(file));
+        TransFile transFile = makeTransfile("slut");
+        assertThrows(UnsupportedOperationException.class, () -> transFile.getLines().add(null));
     }
 
     @Test
     public void exists_transfileExistsOnTheFileSystem_returnsTrue() throws IOException {
-        final Path file = testFolder.newFile().toPath();
-        final TransFile transFile = new TransFile(file);
+        TransFile transFile = makeTransfile("");
         assertThat(transFile.exists(), is(true));
     }
 
     @Test
-    public void exists_transfileDoesNotExistOnTheFileSystem_returnsFalse() throws IOException {
-        final Path file = testFolder.newFile().toPath();
-        final TransFile transFile = new TransFile(file);
-        Files.delete(file);
-        assertThat(transFile.exists(), is(false));
-    }
-
-    @Test
     public void ascii() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.ascii.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.ascii.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -188,7 +140,7 @@ public class TransFileTest {
 
     @Test
     public void utf8() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf8.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf8.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001,i=æøå"));
@@ -196,7 +148,7 @@ public class TransFileTest {
 
     @Test
     public void utf8Bom() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf8.bom.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf8.bom.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -204,7 +156,7 @@ public class TransFileTest {
 
     @Test
     public void utf16BigEngine() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.be.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.be.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -212,7 +164,7 @@ public class TransFileTest {
 
     @Test
     public void utf16BigEngineBom() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.be.bom.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.be.bom.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -220,7 +172,7 @@ public class TransFileTest {
 
     @Test
     public void utf16LittleEngine() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.le.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.le.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -228,7 +180,7 @@ public class TransFileTest {
 
     @Test
     public void utf16LittleEngineBom() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.le.bom.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf16.le.bom.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -236,7 +188,7 @@ public class TransFileTest {
 
     @Test
     public void utf32BigEngine() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.be.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.be.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -244,7 +196,7 @@ public class TransFileTest {
 
     @Test
     public void utf32BigEngineBom() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.be.bom.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.be.bom.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -252,7 +204,7 @@ public class TransFileTest {
 
     @Test
     public void utf32LittleEngine() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.le.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.le.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
@@ -260,9 +212,19 @@ public class TransFileTest {
 
     @Test
     public void utf32LittleEngineBom() {
-        final TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.le.bom.trans"));
+        TransFile transFile = new TransFile(Paths.get("src/test/resources/123456.utf32.le.bom.trans"));
         assertThat("transfile isValid", transFile.isValid(), is(true));
         assertThat("transfile content", transFile.getLines().get(0).getLine(),
                 is("b=base,f=123456.001"));
+    }
+
+    private TransFile makeTransfile(String filename, String content) throws IOException {
+        Path file = Files.createFile(testFolder.resolve(filename));
+        Files.writeString(file, content);
+        return new TransFile(file);
+    }
+
+    private TransFile makeTransfile(String content) throws IOException {
+        return makeTransfile("123456.trans", content);
     }
 }
